--- a/index.ipynb
+++ b/index.ipynb
@@ -45,13 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTRIBUTING.md  index.ipynb  LICENSE.md  planets.db  pytests  README.md\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import sqlite3\n",
+    "conn = sqlite3.connect('planets.db')\n",
+    "c = conn.cursor()"
    ]
   },
   {
@@ -91,6 +109,27 @@
    "metadata": {},
    "source": [
     "## Select just the name and color of each planet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "near \"table\": syntax error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-884bd84d7621>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\"select * from table;\"\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: near \"table\": syntax error"
+     ]
+    }
+   ],
+   "source": [
+    "c.execute(\"\"\"select * from table;\"\"\")"
    ]
   },
   {
@@ -149,35 +188,17 @@
        "      <td>Jupiter</td>\n",
        "      <td>orange</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Saturn</td>\n",
-       "      <td>hazel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Uranus</td>\n",
-       "      <td>light blue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Neptune</td>\n",
-       "      <td>dark blue</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name       color\n",
-       "0  Mercury        gray\n",
-       "1    Venus      yellow\n",
-       "2    Earth        blue\n",
-       "3     Mars         red\n",
-       "4  Jupiter      orange\n",
-       "5   Saturn       hazel\n",
-       "6   Uranus  light blue\n",
-       "7  Neptune   dark blue"
+       "      name   color\n",
+       "0  Mercury    gray\n",
+       "1    Venus  yellow\n",
+       "2    Earth    blue\n",
+       "3     Mars     red\n",
+       "4  Jupiter  orange"
       ]
      },
      "execution_count": 12,
@@ -186,7 +207,12 @@
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import pandas as pd\n",
+    "c.execute(\"\"\"select name, color from planets;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -285,7 +311,11 @@
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select * from planets where mass > 1.00;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -364,7 +394,11 @@
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select name, mass from planets where mass <= 1.00;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -376,7 +410,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -437,13 +478,17 @@
        "3  Neptune   dark blue"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select name, color from planets where num_of_moons > 10;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -455,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -490,15 +535,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Earth</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>4</td>\n",
        "      <td>Mars</td>\n",
        "      <td>red</td>\n",
@@ -511,18 +547,21 @@
        "</div>"
       ],
       "text/plain": [
-       "   id   name color  num_of_moons  mass  rings\n",
-       "0   3  Earth  blue             1  1.00      0\n",
-       "1   4   Mars   red             2  0.11      0"
+       "   id  name color  num_of_moons  mass  rings\n",
+       "0   4  Mars   red             2  0.11      0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select * from planets where num_of_moons >= 1 and mass < 1;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -530,6 +569,76 @@
    "metadata": {},
    "source": [
     "## Select the name and color of planets that have a color of blue, light blue, or dark blue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Earth</td>\n",
+       "      <td>blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Uranus</td>\n",
+       "      <td>light blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Neptune</td>\n",
+       "      <td>dark blue</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name       color\n",
+       "0    Earth        blue\n",
+       "1   Uranus  light blue\n",
+       "2  Neptune   dark blue"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute(\"\"\"select name, color from planets \n",
+    "            where (color = 'blue' or color = 'light blue' or color = 'dark blue');\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -595,7 +704,7 @@
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n"
    ]
   },
   {
@@ -629,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
